--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@ body {
 	animation: gradient 15s ease infinite;
 	height: 100vh;
     display: grid;
-    grid-auto-flow: column;
-    grid-column-gap: 10px;
+    grid-auto-flow: row;
+    grid-column-gap: 10;
 }
 
 @keyframes gradient {
@@ -24,7 +24,6 @@ body {
     width: 654px;
     margin: 50px auto;
     border-radius: 7px 7px 7px 7px;
-    /* VIA CSS MATIC https://goo.gl/cIbnS */
     -webkit-box-shadow: 0px 14px 32px 0px rgba(0, 0, 0, 0.15);
     -moz-box-shadow: 0px 14px 32px 0px rgba(0, 0, 0, 0.15);
     box-shadow: 0px 14px 32px 0px rgba(0, 0, 0, 0.15);
